--- a/templates/user.html
+++ b/templates/user.html
@@ -1,5 +1,11 @@
 {% extends "bootstrap/base.html" %}
 
+
+{% block scripts%}
+{{ super() }}
+{{ moment.include_moment()}}
+{%endblock%}
+
 {% block title %}Flasky{% endblock %} 
 {% block navbar %}
     <div class="navbar navbar-inverse" role="navigation">
@@ -27,6 +33,9 @@
         <div class="page-header">
             <h1>Hello, {{ name }}!</h1>
         </div>
-        <!-- Additional content can go here -->
+        <div class = "container">
+		<p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
+		<p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
+	</div>
     </div>
 {% endblock %}
